--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "pinia": "^2.0.28",
+    "sass": "^1.58.0",
+    "vite-svg-loader": "^4.0.0",
     "vue": "^3.2.45"
   },
   "devDependencies": {
