--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "pinia": "^2.0.28",
     "sass": "^1.58.0",
     "vite-svg-loader": "^4.0.0",
-    "vue": "^3.2.45"
+    "vue": "^3.2.45",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
