--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "axios": "^1.3.3",
     "pinia": "^2.0.28",
     "sass": "^1.58.0",
     "vite-svg-loader": "^4.0.0",
